[tool.poetry]
name = "pymake"
version = "0.1.0"
description = "A simple tool to add make-like functionality to Python projects."
authors = ["ShyAssassin <49711232+ShyAssassin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[tool.black]
line-length = 135
exclude = "(.git|.env|venv)"
target-version = ["py310","py311"]

[tool.pymake]
format = "black ./src/"
test = "echo Hello World!"
